--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
-spring.application.name=CustomerRestApi
+spring.application.name=CustomerRestAPI
+
+# Server
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/spring-data 
+# Credenciales
+spring.datasource.username=admin
+spring.datasource.password=
+# SQL ejecutadas
+spring.jpa.show-sql=true
+#Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
